# metal-marlin

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  OPTIMIZATION_PLAN.md  README.md  STATUS.md  analyze_moe.py  analyze_results.py  bench_quick.py  bench_reproducible.py  benchmark_trellis_metal.py  debug_acc.py  debug_b_buf.py  debug_dispatch.py  debug_store.py  follow_up_task.md  patch_gemm.py  pyproject.toml  pyrightconfig.json  reference_gemm.py  run_simdgroups_2_test.py  run_variant.py  setup.py  test_acc_aliasing.py  test_fused_kernel.py  test_gemm_throughput.py  test_glm4_quant.py  test_inline_store.py  test_layout.py  test_mma_loop.py  test_moe_quick.py  test_simdgroup_load.py  test_simdgroup_load_cols.py  test_simdgroup_load_loop.py  test_simple_fp16.py
benchmarks/: OPTIMIZED_KERNEL_SELECTION.md  README.md  RESULTS.md  __init__.py  ab_test_kernels.py  analyze_attention_bandwidth.py  baseline_benchmark.py  baseline_bf16.json  bench_ane_conv.py  bench_attention.py  bench_attention_variants.py  bench_bf16_conversion.py  bench_bf16_optimized.py  bench_buffer_ops.py  bench_clean.py  bench_comparison.py  bench_components.py  bench_debug.py  bench_dtype_perf.py  bench_dynamic_dispatch.py  bench_forward_profile.py  bench_fp4_metal.py  bench_fused_e2e.py  bench_fused_vs_pytorch.py  bench_gemm.py  bench_gemm_trellis.py  bench_glm47_flash.py  bench_glm47_quality.py  bench_glm47_sensitivity_mixed.py  bench_glm47_trellis.py  bench_glm4_throughput.py  bench_inference.py  bench_kernel_selection.py  bench_kernel_variants.py  bench_kv_cache_layout.py  bench_kv_layout.py  bench_kv_layout_results.json  bench_kv_memory_bandwidth.py  bench_llama.py  bench_m4_kernel_selection.py  (+89 more)
converters/: __init__.py  calibration.py  nemo_to_pytorch.py  onnx_executor.py  ort_marlin_provider.py  quantize.py  safetensors_loader.py
cpp/: CMakeLists.txt
cpp/build_test_router/: bench_router_dispatch  test_router_dispatch
cpp/include/: batch_dispatch.hpp  buffer_manager.hpp  buffer_pool.hpp  direct_access.hpp  encoder_cache.hpp  events.hpp  expert_buffer_pool.hpp  gemm_dispatch.hpp  library_manager.hpp  metal_device.hpp  moe_manager.hpp  moe_router_dispatch.hpp  mtl_buffer_bridge.hpp  norm_ops.hpp  pipeline.hpp  python_types.hpp  sampling_ops.hpp  weights_ops.hpp
cpp/nanobind_src/: hash.h  nb_abi.h  nb_ft.h  nb_internals.h
cpp/src/: batch_dispatch.mm  buffer_manager.cpp  core.mm  device.cpp  device_discovery.cpp  direct_access.mm  encoder_cache.mm  events.mm  expert_buffer_pool.cpp  gemm_dispatch.cpp  library_manager.mm  metal_context.hpp  metal_impl.cpp  mla_attention.hpp  mla_attention.mm  moe_manager.mm  moe_router_dispatch.cpp  mtl_buffer_bridge.mm  mtl_buffer_bridge_bindings.mm  norm_ops.cpp  pipeline.mm  pool.cpp  python_bindings.mm  sampling_ops.mm  weights_ops.cpp
cpp/tests/: bench_router_dispatch.cpp  test_router_dispatch.cpp
developer_tests/: audit_kernels.py  auto_fix_metal.py  baseline_cpu_moe.py  benchmark_all_layers.py  benchmark_fused_vs_sequential_moe.py  benchmark_kernels_post_refactor.py  benchmark_moe_dispatch.py  check_kernels.py  check_weight_format.py  compare_layers.py  minimal_repro.py  profile_moe.py  profile_moe_detailed.py  profile_prefill.py  quick_benchmark.py  test_fp4_dequant.py  test_grid_issue.py  test_layer_structure.py  test_metal_kernels.py  test_mla_correctness.py  test_moe_kernel.py  test_native_vs_trellis.py  test_router.py  test_router_kernel.py  test_single_expert.py  test_topk_variants.py  test_torch_moe.py  test_trellis_moe.py
docs/: OPTIMIZATION_APPLIED.md  OPTIMIZATION_TARGET.md  QUICKSTART_SERVING.md  VALIDATION_CHECKLIST.md  api.md  architecture.md  attention_bf16_audit.md  batch_scheduler_implementation.md  bf16_audit.md  buffer_copy_audit.md  calibration.md  cli.md  code_cleanup_summary.md  compatibility.md  dequant_algorithm.md  dequantization.md  development_setup.md  fa3_architecture.md  final_cleanup_summary.md  fused_dequant_gemm.md  gemm_alignment_audit.md  gemm_bf16_audit.md  gemm_trellis_moe_refactor.md  getting_started.md  glm47_mixed_bit_fairway_dispatch_report.md  glm47_mixed_bpw_optimization_report.md  glm4_throughput_report.md  index.md  inference_architecture.md  integration.md  kernel_performance_m4max.md  kernel_profile.md  kernel_selection.md  kv_cache.md  memory_access_patterns.md  memory_optimization.md  metal_acceleration.md  metal_asr_implementation.md  metal_half_precision_bug.md  metal_kernel_audit.md  (+29 more)
examples/: GLM-4.7-Flash-MoE.ipynb  balance_loss_usage.py  example_awq.py  glm4_flash_inference.py  perf_dashboard.py  quantize_hf_model.py  streaming_quantization_example.py
metal_marlin/: __init__.py  __main__.py  _buffer_pool.py  _compat.py  _metal_buffer_bridge.c  _metal_buffer_bridge.pxd  _metal_buffer_bridge.pyx  _padding.py  _psd_dispatch.mm  _quantized_weights.py  activation_metal.py  async_dispatch.py  attention.py  autotune.py  awq.py  batched_gemm_variable_seq.py  benchmark_models.py  benchmark_report.py  buffer_bridge.py  buffer_pool.py  buffer_ring.py  cache_metal.py  calibration.py  calibration_utils.py  capacity.py  checkpoint.py  cli.py  continuous_batching.py  cpp_extension.cpp  distributed_gptq.py  dtypes.py  dynamic_moe_bindings.cpp  early_exit.py  eval_kl_divergence.py  eval_perplexity.py  expert_cache.py  expert_manager_cpp.py  expert_ops.py  expert_weight_manager.py  expert_weight_streaming.py  (+100 more)
plans/: 2026-02-07_mixed_bit_fairway_dispatch_review.md
reports/: report-20260202-101856.json
results/: ab_tests.json  kernel_selection_m4_max.json
scripts/: _qwen_moe_shared.py  analyze_bit_tuples.py  analyze_expert_grid.py  analyze_expert_usage.py  analyze_layer_importance.py  analyze_parakeet_results.py  audit_legacy_code.py  bench_throughput.py  benchmark_continuous_batching.py  benchmark_cpp_dispatch.py  benchmark_dequant.py  benchmark_fa3.py  benchmark_kv_layout.py  benchmark_moe_fusion.py  benchmark_optimized.py  benchmark_tile_sizes.py  build_metallib.sh  check_buffer_sizes.py  check_circular_includes.py  check_expert_nan.py  check_includes.py  debug_fp4.py  (+75 more)
(+797 files in other folders)
