# Metal Marlin - FP4 Quantization for Apple Silicon
# This is a standalone project intended for public release

[project]
name = "metal-marlin"
version = "0.1.0"
description = "FP4/INT4 quantization for LLMs on Apple Silicon with native Metal shaders"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["quantization", "llm", "metal", "apple-silicon", "fp4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "accelerate>=1.12.0",
    "numpy>=1.24.0",
    "psutil>=7.2.2",
    "pyobjc-framework-metal>=12.1",
    "pyobjc-framework-metalperformanceshaders>=12.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "safetensors>=0.4.0",
    "scipy>=1.10.0",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
inference = [
    "transformers>=4.30.0",
    "huggingface_hub>=0.23.0",
]
metal = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-Metal>=10.0",
    "pyobjc-framework-MetalPerformanceShaders>=10.0",
]
serve = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "sse-starlette>=1.6.0",
]
torch = ["torch>=2.0.0"]
analysis = ["matplotlib>=3.5.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0", "transformers>=4.30.0"]
all = ["metal-marlin[metal,serve,torch,dev,analysis]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["metal_marlin"]

# Ruff configuration - relaxed naming rules for ML/matrix code
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
# Exclude N rules (pep8-naming) - ML code uses uppercase for matrix dimensions
# N803: argument name should be lowercase (e.g., A, B matrices)
# N806: variable in function should be lowercase (e.g., M, K, N dimensions)
ignore = [
    "E501", # Line too long (handled by formatter)
    "E731", # Don't assign lambda (sometimes cleaner)
]

[tool.ruff.lint.per-file-ignores]
# Tests use sys.path manipulation before imports (E402)
# Tests can have unused imports for fixtures (F401, F811)
"tests/*" = ["E402", "F401", "F811"]
# calibration/__init__.py has intentional import ordering for backwards compat shim
"metal_marlin/calibration/__init__.py" = ["E402", "F401"]
# Attention implementations use O for output (standard QKV notation)
"metal_marlin/sliding_window_attention.py" = ["E741"]
"metal_marlin/tree_attention.py" = ["E741"]
"metal_marlin/flash_attention_v2.py" = ["E741"]
# Vision layer uses 'l' for layer in comprehensions
"metal_marlin/vision/layer_sensitivity.py" = ["E741"]
# Scripts have sys.path manipulation before imports
"scripts/*" = ["E402"]
# Benchmarks have unused variables from timing loops
"benchmarks/*" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[dependency-groups]
dev = ["pyright>=1.1.408"]
