# Metal Marlin - FP4 Quantization for Apple Silicon
# This is a standalone project intended for public release

[project]
name = "metal-marlin"
version = "0.1.0"
description = "FP4/INT4 quantization for LLMs on Apple Silicon with native Metal shaders"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["quantization", "llm", "metal", "apple-silicon", "fp4"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "accelerate>=1.0.0,<2.0.0",
    "numpy>=1.24.0",
    "nanobind>=2.0.0",
    "psutil>=5.9.0",
    "pybind11>=3.0.1",
    "pydantic>=2.0.0",
    # macOS-only Metal bindings (conditional)
    "pyobjc-framework-metal>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-metalperformanceshaders>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-metalperformanceshadersgraph>=10.0; sys_platform == 'darwin'",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "safetensors>=0.4.0",
    "scipy>=1.10.0",
    "tiktoken>=0.5.0",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "transformers>=5.0.0",
    "huggingface-hub[cli]>=1.3.7",
    "pandas>=2.0.0",
    "uvicorn>=0.40.0",
    "fastapi>=0.128.0",
]

[project.optional-dependencies]
inference = ["transformers>=5.0.0", "huggingface_hub>=0.23.0"]
metal = [
    "pyobjc-core>=10.0",
    "pyobjc-framework-Metal>=10.0",
    "pyobjc-framework-MetalPerformanceShaders>=10.0",
]
serve = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "sse-starlette>=1.6.0",
]
torch = ["torch>=2.0.0"]
analysis = ["matplotlib>=3.5.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0", "transformers>=5.0.0", "cython>=3.0.0"]
all = ["metal-marlin[metal,serve,torch,dev,analysis]"]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython>=3.0.0",
    "numpy>=1.24.0",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["metal_marlin*"]

[tool.setuptools.package-data]
metal_marlin = ["*.pyx", "*.pxd"]

[tool.cibuildwheel]
# Only build for macOS arm64 (Apple Silicon)
build = "cp311-macosx_arm64 cp312-macosx_arm64"
skip = "*-win* *-linux* *-manylinux* *-musllinux* *x86_64*"

# Ruff configuration - relaxed naming rules for ML/matrix code
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
# Exclude N rules (pep8-naming) - ML code uses uppercase for matrix dimensions
# N803: argument name should be lowercase (e.g., A, B matrices)
# N806: variable in function should be lowercase (e.g., M, K, N dimensions)
ignore = [
    "E501", # Line too long (handled by formatter)
    "E731", # Don't assign lambda (sometimes cleaner)
    "W293", # Blank line contains whitespace (noisy, handled by formatter)
    "F841", # Local variable assigned but never used (common in timing/debug code)
]

[tool.ruff.lint.per-file-ignores]
# Tests use sys.path manipulation before imports (E402)
# Tests can have unused imports for fixtures (F401, F811)
"tests/*" = ["E402", "F401", "F811"]
# calibration/__init__.py has intentional import ordering for backwards compat shim
"metal_marlin/calibration/__init__.py" = ["E402", "F401"]
# Attention implementations use O for output (standard QKV notation)
"metal_marlin/sliding_window_attention.py" = ["E741"]
"metal_marlin/tree_attention.py" = ["E741"]
"metal_marlin/flash_attention_v2.py" = ["E741"]
# Vision layer uses 'l' for layer in comprehensions
"metal_marlin/vision/layer_sensitivity.py" = ["E741"]
# Scripts have sys.path manipulation before imports
"scripts/*" = ["E402"]
# Benchmarks have unused variables from timing loops
"benchmarks/*" = ["F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
asyncio_mode = "auto"

[project.scripts]
metal-marlin = "metal_marlin.cli:cli"

[dependency-groups]
dev = [
    "cython>=3.2.4",
    "pdoc3>=0.11.6",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
]
